Fix addressbar contrast

--- a/custom.css
+++ b/custom.css
@@ -177,7 +177,7 @@
 #browser:not(.fullscreen):not(.is-settingspage):not(.is-settingspage) .UrlBar-AddressField:focus-within {
     box-shadow: 0 0 0 1px var(--colorAccentBgFadedMost) inset;
     border-color: var(--colorAccentBgFadedMost);
-    background-color: var(--colorAccentBgDarker);
+    background-color: var(--colorAccentBgDark);
 }
 
 #browser:not(.fullscreen):not(.is-settingspage):not(.is-settingspage) .UrlBar-AddressField .UrlField .UrlFragment-Wrapper {
